--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent-of-code-rust"
+name = "advent-of-code"
 version = "0.2020.0"
 authors = ["Carlos Macasaet <rust-developer@carlos-m.net>"]
 edition = "2018"
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+unicode-segmentation = "1.7.1"
