--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hashers = "1.0.1"
+lazy_static = "1.4.0"
 regex = "1"
 unicode-segmentation = "1.7.1"
-lazy_static = "1.4.0"
