--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,7 @@ edition = "2018"
 hashers = "1.0.1"
 lazy_static = "1.4.0"
 regex = "1"
+serde = "1.0.124"
+serde_derive = "1.0.124"
+toml = "0.5.8"
 unicode-segmentation = "1.7.1"
