--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 hashers = "1.0.1"
 lazy_static = "1.4.0"
+rayon = "1.5.1"
 regex = "1"
 serde = "1.0.126"
 serde_derive = "1.0.126"
