--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Build
       run: cargo build --locked --verbose
     - name: Lint
-      run: cargo clippy --all-targets --all-features -- -D warnings
+      run: cargo clippy
     - name: Run tests
       run: cargo test --verbose
