--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "advent-of-code"
-version = "0.2020.0"
+version = "0.2022.0"
 authors = ["Carlos Macasaet <rust-developer@carlos-m.net>"]
 edition = "2018"
 
@@ -14,3 +14,8 @@ serde = "1.0.148"
 serde_derive = "1.0.148"
 toml = "0.5.9"
 unicode-segmentation = "1.10.0"
+[dependencies.uuid]
+version = "1.2.2"
+features = [
+    "v4",
+]
